# Linux_Programming

./: ebbchar.c
Knowledge_Work/CMakeProject/CMake_Project_with_Directories/: CMakeLists.txt
Knowledge_Work/CMakeProject/CMake_Project_with_Directories/include/: student.h
Knowledge_Work/CMakeProject/StaticLibraryWithCMake/: CMakeLists.txt  README
Project_Work/mediapres/media/src/: CMakeLists.txt  MediaPresControl.cpp  MediaPresControlConstants.cpp  MediaPresControlConstants.h  MediaPresControlTypes.hpp  MediaPresCore.cpp  MediaPresCore.h  core.h  src.kdev4
Project_Work/mediapres/media/src/audiomanagerinterface/: RoutingControlStubImpl.cpp  RoutingControlStubImpl.hpp  audiomanagerinterface.cpp  audiomanagerinterface.h
Project_Work/mediapres/media/src/autogencode/: CMakeLists.txt
Project_Work/mediapres/media/src/autogencode/src-gen/: CMakeLists.txt
Project_Work/mediapres/media/src/autogencode/src-gen/consumes/com/harman/connectivity/: btTypedefs.hpp
Project_Work/mediapres/media/src/autogencode/src-gen/consumes/v0/org/harman/ford/: actvparkassist_types.hpp  applink_types.hpp  audio_types.hpp  baterrydata_types.hpp  bodycontroldata_types.hpp  bt_connectivity_types.hpp  camerainfo_types.hpp  climatectrl_types.hpp  clockdata_types.hpp  emergassist_types.hpp  enginedata_types.hpp  key_input_types.hpp  langdata_types.hpp  mediaplayback.hpp  mediaplaybackProxy.hpp  mediaplaybackProxyBase.hpp  mediaplayback_types.hpp  navi_types.hpp  notifalert_types.hpp  visualparkassist_types.hpp  wifinfo_types.hpp
Project_Work/mediapres/media/src/autogencode/src-gen/consumes/v1/com/harman/connectivity/: BtServiceDebugOnly.hpp  BtServiceDebugOnlyProxy.hpp  BtServiceDebugOnlyProxyBase.hpp
Project_Work/mediapres/media/src/autogencode/src-gen/consumes/v1/com/harman/media/: BaseType.hpp  DeviceManager.hpp  DeviceManagerProxy.hpp  DeviceManagerProxyBase.hpp  ImageProcess.hpp  ImageProcessProxy.hpp  ImageProcessProxyBase.hpp  (+6 more)
Project_Work/mediapres/media/src/autogencode/src-gen/provides/v3/org/genivi/: am_t.hpp
Project_Work/mediapres/media/src/browseengine/: BrowseHelper.cpp  BrowseHelper.h  MediaBrowseEngine.cpp  MediaBrowseEngine.h  MediaBrowserStubImpl.cpp  MediaBrowserStubImpl.h
Project_Work/mediapres/media/src/browseengine/session/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  SessionQuery.cpp  SessionQuery.h  SessionQueryCategory.cpp  SessionQueryCategory.h  SessionQueryFS.cpp  SessionQueryFS.h  SessionQueryFS_BTSA.cpp  SessionQueryFS_BTSA.h  SessionQueryHighestRated.cpp  SessionQueryHighestRated.h  SessionQueryMetadata.cpp  SessionQueryMetadata.h  SessionQueryNowPlaying.cpp  SessionQueryNowPlaying.h  SessionQueryRecentlyPlayed.cpp  SessionQueryRecentlyPlayed.h  SessionQueryRemoteCDFS.cpp  SessionQueryRemoteCDFS.cpp.orig  SessionQueryRemoteCDFS.h  SessionQueryRemoteCDNowPlaying.cpp  SessionQueryRemoteCDNowPlaying.h
Project_Work/mediapres/media/src/config/: ConfigParser.cpp  ConfigParser.h  MediaPresSettings.cpp  MediaPresSettings.h  mediapres.cfg
Project_Work/mediapres/media/src/detectionengine/: DeviceManagerHelper.cpp  DeviceManagerHelper.h  MediaDetectionEngine.cpp  MediaDetectionEngine.h  MediaManagerStubImpl.cpp  MediaManagerStubImpl.h  SlotBase.cpp  SlotBase.h
Project_Work/mediapres/media/src/device/: DeviceBase.cpp  DeviceBase.h  DeviceBluetooth.cpp  DeviceBluetooth.h  DeviceDummy.cpp  DeviceDummy.h  DeviceIAP1.cpp  DeviceIAP1.h  DeviceIAP2.cpp  DeviceIAP2.h  DeviceIpod.cpp  DeviceIpod.h  DeviceMtp.cpp  DeviceMtp.h  DeviceRemoteCD.cpp  DeviceRemoteCD.h  DeviceUmass.cpp  DeviceUmass.h
Project_Work/mediapres/media/src/playengine/: MediaPlaybackEngine.cpp  MediaPlaybackEngine.h  MediaPlayerStubImpl.cpp  MediaPlayerStubImpl.hpp  MediaSettingsStubImpl.cpp  MediaSettingsStubImpl.hpp  PlayHelper.cpp  PlayHelper.h  RemoteCDplaybackengine.cpp  RemoteCDplaybackengine.h
Project_Work/mediapres/media/src/playengine/base/: RequestPlay.cpp  RequestPlay.h  RequestSkip.cpp  RequestSkip.h
Project_Work/mediapres/media/src/remotecdcomponent/includes/: IRemoteCDPlugin.hpp  RemoteCDConfig.hpp  RemoteCDCore.hpp  RemoteCDEvents.hpp  RemoteCDManager.hpp  RemoteCDPlayControls.hpp  RemoteCDTP.hpp  RemoteCDTypes.hpp
Project_Work/mediapres/media/src/remotecdcomponent/includes/browse/: RemoteCDBrowse.hpp  RemoteCDFolder.hpp  RemoteCDItem.hpp
Project_Work/mediapres/media/src/remotecdcomponent/includes/cache/: RemoteCDCache.hpp  RemoteCDCacheBuilder.hpp
Project_Work/mediapres/media/src/remotecdcomponent/includes/util/: RemoteCDLog.hpp
Project_Work/mediapres/media/src/statemachine/: MediaSwitch7.cpp  MediaSwitch7.h  StatemachineInterface.h  sourceswitch.cpp  sourceswitch.h
Project_Work/pg_core/prescore/: CMakeLists.txt
Project_Work/pg_core/prescore/CoreTest/: CMakeLists.txt  CoreTest.cpp  CoreTest.h  CoreTestPlugin.h  testplugin.cpp
Project_Work/pg_core/prescore/CoreTest/autogencode/: CMakeLists.txt
Project_Work/pg_core/prescore/CoreTest/autogencode/src-gen/: CMakeLists.txt
Project_Work/pg_core/prescore/corelib/: CEventManager.cpp  CEventManager.hpp  CJobQueueExecutor.cpp  CMainLoop.cpp  CMainLoop.h  CMakeLists.txt  CThreadInterface.cpp  CThreadManager.cpp  CTimerInterface.cpp  CTimerManager.cpp  CTimerManager.h  CommonAPIMainLoopEngine.cpp  CommonAPIMainLoopEngine.h  EventQueueAbstraction.cpp  EventQueueAbstraction.h  IDataHandler.cpp  LifeCycleManager.cpp  LifeCycleManager.h  Persistence.cpp  PresCtrl.cpp  PresCtrlCore.cpp  PresCtrlCore.h  PresEventAbstraction.cpp  RequestBase.cpp  RequestManager.cpp  RequestManager.h  WdgManager.cpp  WdgManager.h  logging.cpp
Project_Work/pg_core/prescore/corelib/autogencode/: CMakeLists.txt
Project_Work/pg_core/prescore/inc/core/: CThreadInterface.h  CThreadManager.h  CTimerInterface.h  CommonAPIClientAbstraction.h  CommonAPIServiceAbstraction.h  IDataHandler.h  Lifecycle.h  LinkedList.h  PluginLoader.h  PresCtrl.h  PresCtrlTypes.h  PresEventAbstraction.h  RequestBase.h
Project_Work/pg_core/prescore/inc/lifecycle/v2/org/genivi/NodeStateManager/: Consumer.hpp  ConsumerProxy.hpp  ConsumerProxyBase.hpp  NodeStateTypes.hpp
(+1096 files in other folders)
